...
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="@+id/btnSetup"
        app:layout_constraintStart_toStartOf="@+id/btnSetup"
        app:layout_constraintTop_toBottomOf="@+id/btnSetup" />

    <Button
        android:id="@+id/btnAdvanced"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/advanced"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="@+id/btnGPSLocation"
        app:layout_constraintStart_toStartOf="@+id/btnGPSLocation"
        app:layout_constraintTop_toBottomOf="@+id/btnGPSLocation" />

    <Button
        android:id="@+id/btnDisable"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
...
